Switched to sqlc instead of gorm
