# db/sqlc/models.go
@@ -1,0 +1,106 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.26.0
+
+package db
+
+import (
+	"database/sql"
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type Customer struct {
+	CustomerID         uuid.UUID      `json:"customer_id"`
+	TenantID           string         `json:"tenant_id"`
+	CustomerName       sql.NullString `json:"customer_name"`
+	CustomerAddress    sql.NullString `json:"customer_address"`
+	CustomerCity       sql.NullString `json:"customer_city"`
+	CustomerState      sql.NullString `json:"customer_state"`
+	CustomerCountry    sql.NullString `json:"customer_country"`
+	CustomerTotalValue sql.NullInt64  `json:"customer_total_value"`
+	CustomerStatus     sql.NullString `json:"customer_status"`
+}
+
+type CustomerContact struct {
+	CustomerID           uuid.NullUUID  `json:"customer_id"`
+	TenantID             string         `json:"tenant_id"`
+	CustomerEmail1       sql.NullString `json:"customer_email_1"`
+	CustomerPhoneNumber1 sql.NullString `json:"customer_phone_number_1"`
+	CustomerEmail2       sql.NullString `json:"customer_email_2"`
+	CustomerPhoneNumber2 sql.NullString `json:"customer_phone_number_2"`
+}
+
+type CustomerDetail struct {
+	CustomerID        uuid.NullUUID  `json:"customer_id"`
+	TenantID          string         `json:"tenant_id"`
+	CustomerAppType   sql.NullString `json:"customer_app_type"`
+	CustomerReference sql.NullString `json:"customer_reference"`
+	CustomerAppSize   sql.NullString `json:"customer_app_size"`
+}
+
+type CustomerTranscation struct {
+	TransactionID    uuid.UUID      `json:"transaction_id"`
+	InvoiceID        sql.NullString `json:"invoice_id"`
+	CustomerID       uuid.NullUUID  `json:"customer_id"`
+	TenantID         string         `json:"tenant_id"`
+	Amount           sql.NullInt64  `json:"amount"`
+	CreatedAt        time.Time      `json:"created_at"`
+	UpdatedAt        time.Time      `json:"updated_at"`
+	TranscationDebit sql.NullBool   `json:"transcation_debit"`
+}
+
+type InternalTranscation struct {
+	TransactionID    uuid.UUID      `json:"transaction_id"`
+	InvoiceID        sql.NullString `json:"invoice_id"`
+	UserName         sql.NullString `json:"user_name"`
+	TenantID         string         `json:"tenant_id"`
+	Amount           sql.NullInt64  `json:"amount"`
+	CreatedAt        time.Time      `json:"created_at"`
+	UpdatedAt        time.Time      `json:"updated_at"`
+	TranscationDebit sql.NullBool   `json:"transcation_debit"`
+}
+
+type Quotation struct {
+	QuotationID    uuid.UUID      `json:"quotation_id"`
+	CustomerID     uuid.NullUUID  `json:"customer_id"`
+	TenantID       string         `json:"tenant_id"`
+	QuotationValue sql.NullInt64  `json:"quotation_value"`
+	QuatationType  sql.NullString `json:"quatation_type"`
+	CreatedAt      time.Time      `json:"created_at"`
+	UpdatedAt      time.Time      `json:"updated_at"`
+	Converted      sql.NullBool   `json:"converted"`
+}
+
+type ServiceDetail struct {
+	CustomerID      uuid.NullUUID `json:"customer_id"`
+	UnderWarranty   sql.NullBool  `json:"under_warranty"`
+	NextServiceDate sql.NullTime  `json:"next_service_date"`
+	ServiceAmount   sql.NullInt64 `json:"service_amount"`
+	TenantID        string        `json:"tenant_id"`
+}
+
+type Vendor struct {
+	VendorID          uuid.UUID      `json:"vendor_id"`
+	VendorName        sql.NullString `json:"vendor_name"`
+	VendorAddress     sql.NullString `json:"vendor_address"`
+	VendorCity        sql.NullString `json:"vendor_city"`
+	VendorState       sql.NullString `json:"vendor_state"`
+	VendorCountry     sql.NullString `json:"vendor_country"`
+	VendorEmail       sql.NullString `json:"vendor_email"`
+	VendorPhoneNumber sql.NullString `json:"vendor_phone_number"`
+	TenantID          string         `json:"tenant_id"`
+}
+
+type VendorTranscation struct {
+	TransactionID    uuid.UUID      `json:"transaction_id"`
+	InvoiceID        sql.NullString `json:"invoice_id"`
+	VendorID         uuid.NullUUID  `json:"vendor_id"`
+	TenantID         string         `json:"tenant_id"`
+	Amount           sql.NullInt64  `json:"amount"`
+	CreatedAt        time.Time      `json:"created_at"`
+	UpdatedAt        time.Time      `json:"updated_at"`
+	TransactionType  sql.NullString `json:"transaction_type"`
+	TranscationDebit sql.NullBool   `json:"transcation_debit"`
+}
