# routes/customer.go
@@ -1,16 +1,26 @@
 package routes
 
 import (
-	"salesservice/controllers"
-	middleware "salesservice/middlewares"
+	"os"
+
+	"github.com/rovesaas/salesservice/controllers"
+	middleware "github.com/rovesaas/salesservice/middlewares"
+	"go.opentelemetry.io/contrib/instrumentation/github.com/gin-gonic/gin/otelgin"
 
 	"github.com/gin-gonic/gin"
 )
 
-func CustomerRoutes(r *gin.Engine) {
-	r.Use(middleware.AuthenticationMiddleware())
-	r.POST("/customer", controllers.CreateCustomer)
-	r.GET("/customer/:id", controllers.GetCustomerByID)
-	r.GET("/customers", controllers.GetAllCustomers)
+type CustomerRoutes struct {
+	customerController controllers.CustomerController
+}
 
+func NewRouteCustomer(customerController controllers.CustomerController) CustomerRoutes {
+	return CustomerRoutes{customerController}
+}
+
+func (cr *CustomerRoutes) CustomerRoute(rg *gin.RouterGroup) {
+	rg.Use(otelgin.Middleware(os.Getenv("OTEL_SERVICE_NAME")))
+	rg.Use(middleware.AuthenticationMiddleware())
+	router := rg.Group("customer")
+	router.POST("/", cr.customerController.CreateCustomer)
 }
